--- a/Transformations/data_analyisis_and_clean.ipynb
+++ b/Transformations/data_analyisis_and_clean.ipynb
@@ -2,12 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -17,8 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "((552, 21620), (552, 21620), (552, 17))"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Cargamos los datos originales\n",
     "fhr_pickle = pd.read_pickle(f\"{paths.ORIGINAL_DATA_PATH}/fhr_ctu-chb.pickle\")\n",
@@ -36,17 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(True, True, True)"
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 2,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
