Refactor and explanation of removed useless curves

--- a/Transformations/data_analyisis_and_clean.ipynb
+++ b/Transformations/data_analyisis_and_clean.ipynb
@@ -228,12 +228,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "uc_no_extremes = uc.copy()\n",
     "uc_no_extremes[uc_no_extremes == 0] = np.nan\n",
-    "constant_shapes_no_extremes =  uc_no_extremes.apply(lambda x: pd_utils.constant_size(x.values, threshold=10), axis=1)"
+    "constant_shapes_no_extremes =  uc_no_extremes.apply(lambda x: pd_utils.constant_size(x.values, threshold=4*5), axis=1)"
    ],
    "metadata": {
     "collapsed": false,
@@ -244,13 +244,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "outputs": [
     {
      "data": {
-      "text/plain": "1104    18000.0\n1119    14820.0\n1130    16895.0\n1134    14821.0\n1149    16662.0\n1155    16800.0\n1158    18655.0\n1186    15026.0\n1188    15588.0\n1258    17969.0\n1327    16551.0\n1376    16126.0\n1451    16184.0\n1456    14951.0\ndtype: float64"
+      "text/plain": "1104    18000.0\n1119    14757.0\n1130    15634.0\n1134    14770.0\n1149    16530.0\n1155    16800.0\n1158    18079.0\n1186    14544.0\n1188    15588.0\n1258    17969.0\n1327    16303.0\n1376    15682.0\n1451    16062.0\n1477    14611.0\ndtype: float64"
      },
-     "execution_count": 23,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,13 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "outputs": [
     {
      "data": {
-      "text/plain": "1    7\n0    7\nName: ph, dtype: int64"
+      "text/plain": "1    8\n0    6\nName: ph, dtype: int64"
      },
-     "execution_count": 28,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
