--- a/Transformations/data_analyisis_and_clean.ipynb
+++ b/Transformations/data_analyisis_and_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
      "data": {
       "text/plain": "<module 'Utils.pandas_utils' from 'C:\\\\Users\\\\jllav\\\\IdeaProjects\\\\TFM\\\\Utils\\\\pandas_utils.py'>"
      },
-     "execution_count": 1,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,7 +26,6 @@
     "\n",
     "import Utils.pandas_utils as pd_utils\n",
     "import Utils.paths as paths\n",
-    "import importlib\n",
     "\n",
     "importlib.reload(paths)\n",
     "importlib.reload(pd_utils)"
@@ -456,6 +455,63 @@
     "\n",
     "plt.savefig(f\"{paths.ORIGINAL_DATA_PLOTS}/Means_plots_clean_cut.pdf\")\n",
     "plt.savefig(f\"{paths.ORIGINAL_DATA_PLOTS}/Means_plots_clean_cut.png\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "outputs": [],
+   "source": [
+    "uc_cut.to_csv(f\"{paths.CLEAN_CUT_PATH}/uc.csv\")\n",
+    "fhr_cut.to_csv(f\"{paths.CLEAN_CUT_PATH}/fhr.csv\")\n",
+    "y_cut.to_csv(f\"{paths.CLEAN_CUT_PATH}/y.csv\")\n",
+    "\n",
+    "uc_cut.to_pickle(f\"{paths.CLEAN_CUT_PATH}/uc.pickle\")\n",
+    "fhr_cut.to_pickle(f\"{paths.CLEAN_CUT_PATH}/fhr.pickle\")\n",
+    "y_cut.to_pickle(f\"{paths.CLEAN_CUT_PATH}/y.pickle\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_fhr_pickle.equals(test_fhr)=True\n",
+      "test_uc_pickle.equals(test_uc)=True\n",
+      "test_y_pickle.equals(test_y)=True\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_fhr = pd.read_csv(f\"{paths.CLEAN_CUT_PATH}/fhr.csv\", index_col=0)\n",
+    "test_uc = pd.read_csv(f\"{paths.CLEAN_CUT_PATH}/uc.csv\", index_col=0)\n",
+    "test_y = pd.read_csv(f\"{paths.CLEAN_CUT_PATH}/y.csv\", index_col=0, squeeze=True)\n",
+    "\n",
+    "test_fhr.columns = test_fhr.columns.astype('float64')\n",
+    "test_uc.columns = test_uc.columns.astype('float64')\n",
+    "\n",
+    "test_fhr_pickle = pd.read_pickle(f\"{paths.CLEAN_CUT_PATH}/fhr.pickle\")\n",
+    "test_uc_pickle = pd.read_pickle(f\"{paths.CLEAN_CUT_PATH}/uc.pickle\")\n",
+    "test_y_pickle = pd.read_pickle(f\"{paths.CLEAN_CUT_PATH}/y.pickle\")\n",
+    "\n",
+    "print(f\"{test_fhr_pickle.equals(test_fhr)=}\")\n",
+    "print(f\"{test_uc_pickle.equals(test_uc)=}\")\n",
+    "print(f\"{test_y_pickle.equals(test_y)=}\")"
    ],
    "metadata": {
     "collapsed": false,
