--- a/Transformations/data_analyisis_and_clean.ipynb
+++ b/Transformations/data_analyisis_and_clean.ipynb
@@ -17,15 +17,13 @@
     }
    ],
    "source": [
-    "import importlib\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import importlib\n",
     "\n",
-    "\n",
-    "import Utils.pandas_utils as pd_utils\n",
-    "import Utils.paths as paths\n",
+    "from Utils import paths\n",
+    "from Utils import pandas_utils as pd_utils\n",
     "\n",
     "importlib.reload(paths)\n",
     "importlib.reload(pd_utils)"
