CC calculus for 5 mins all data and refactoring

--- a/Transformations/data_analyisis_and_clean.ipynb
+++ b/Transformations/data_analyisis_and_clean.ipynb
@@ -466,13 +466,13 @@
    "execution_count": 105,
    "outputs": [],
    "source": [
-    "uc_cut.to_csv(f\"{paths.CLEAN_CUT_PATH}/uc.csv\")\n",
-    "fhr_cut.to_csv(f\"{paths.CLEAN_CUT_PATH}/fhr.csv\")\n",
-    "y_cut.to_csv(f\"{paths.CLEAN_CUT_PATH}/y.csv\")\n",
+    "uc_cut.to_csv(f\"{paths.CLEAN_CUT_DATA_PATH}/uc.csv\")\n",
+    "fhr_cut.to_csv(f\"{paths.CLEAN_CUT_DATA_PATH}/fhr.csv\")\n",
+    "y_cut.to_csv(f\"{paths.CLEAN_CUT_DATA_PATH}/y.csv\")\n",
     "\n",
-    "uc_cut.to_pickle(f\"{paths.CLEAN_CUT_PATH}/uc.pickle\")\n",
-    "fhr_cut.to_pickle(f\"{paths.CLEAN_CUT_PATH}/fhr.pickle\")\n",
-    "y_cut.to_pickle(f\"{paths.CLEAN_CUT_PATH}/y.pickle\")"
+    "uc_cut.to_pickle(f\"{paths.CLEAN_CUT_DATA_PATH}/uc.pickle\")\n",
+    "fhr_cut.to_pickle(f\"{paths.CLEAN_CUT_DATA_PATH}/fhr.pickle\")\n",
+    "y_cut.to_pickle(f\"{paths.CLEAN_CUT_DATA_PATH}/y.pickle\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -496,16 +496,16 @@
     }
    ],
    "source": [
-    "test_fhr = pd.read_csv(f\"{paths.CLEAN_CUT_PATH}/fhr.csv\", index_col=0)\n",
-    "test_uc = pd.read_csv(f\"{paths.CLEAN_CUT_PATH}/uc.csv\", index_col=0)\n",
-    "test_y = pd.read_csv(f\"{paths.CLEAN_CUT_PATH}/y.csv\", index_col=0, squeeze=True)\n",
+    "test_fhr = pd.read_csv(f\"{paths.CLEAN_CUT_DATA_PATH}/fhr.csv\", index_col=0)\n",
+    "test_uc = pd.read_csv(f\"{paths.CLEAN_CUT_DATA_PATH}/uc.csv\", index_col=0)\n",
+    "test_y = pd.read_csv(f\"{paths.CLEAN_CUT_DATA_PATH}/y.csv\", index_col=0, squeeze=True)\n",
     "\n",
     "test_fhr.columns = test_fhr.columns.astype('float64')\n",
     "test_uc.columns = test_uc.columns.astype('float64')\n",
     "\n",
-    "test_fhr_pickle = pd.read_pickle(f\"{paths.CLEAN_CUT_PATH}/fhr.pickle\")\n",
-    "test_uc_pickle = pd.read_pickle(f\"{paths.CLEAN_CUT_PATH}/uc.pickle\")\n",
-    "test_y_pickle = pd.read_pickle(f\"{paths.CLEAN_CUT_PATH}/y.pickle\")\n",
+    "test_fhr_pickle = pd.read_pickle(f\"{paths.CLEAN_CUT_DATA_PATH}/fhr.pickle\")\n",
+    "test_uc_pickle = pd.read_pickle(f\"{paths.CLEAN_CUT_DATA_PATH}/uc.pickle\")\n",
+    "test_y_pickle = pd.read_pickle(f\"{paths.CLEAN_CUT_DATA_PATH}/y.pickle\")\n",
     "\n",
     "print(f\"{test_fhr_pickle.equals(test_fhr)=}\")\n",
     "print(f\"{test_uc_pickle.equals(test_uc)=}\")\n",
