--- a/Transformations/cc_transformations.ipynb
+++ b/Transformations/cc_transformations.ipynb
@@ -320,6 +320,50 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "outputs": [],
+   "source": [
+    "cc_df['patologico'] = y"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "outputs": [],
+   "source": [
+    "cc_df.to_csv(f\"{paths.CC_DATA_PATH}/cc_dataset.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [],
+   "source": [
+    "X = cc_df.iloc[:, :-1]\n",
+    "X.to_pickle(f\"{paths.CC_DATA_PATH}/X.pickle\")\n",
+    "y.to_pickle(f\"{paths.CC_DATA_PATH}/y.pickle\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
