--- a/Experiments/Latex/AUC_SCORE_results.tex
+++ b/Experiments/Latex/AUC_SCORE_results.tex
@@ -21,50 +21,50 @@
 		\setlength{\belowrulesep}{0pt}
 		\begin{tabular}{c|cccc}
 			\hline
-			             & whole           & mRMR            & PCA             & PLS             \\
+			             & PCA             & PLS             & whole           & mRMR            \\
 			\hline
-			 LR          & 0.516 $\pm$ 0.167 & 0.609 $\pm$ 0.191 & 0.649 $\pm$ 0.187 & 0.528 $\pm$ 0.192 \\
-			 KNN         & 0.590 $\pm$ 0.173 & \textbf{0.717 $\pm$ 0.212} & 0.603 $\pm$ 0.172 & 0.631 $\pm$ 0.196 \\
-			 KNNSScaler  & 0.569 $\pm$ 0.185 & 0.543 $\pm$ 0.231 & 0.638 $\pm$ 0.170 & 0.634 $\pm$ 0.153 \\
-			 KNNmMScaler & 0.551 $\pm$ 0.172 & 0.615 $\pm$ 0.266 & \textbf{0.676 $\pm$ 0.132} & 0.591 $\pm$ 0.173 \\
-			 SVC         & 0.525 $\pm$ 0.234 & 0.593 $\pm$ 0.257 & 0.534 $\pm$ 0.159 & 0.591 $\pm$ 0.115 \\
-			 SVCSScaler  & \textbf{0.668 $\pm$ 0.148} & 0.554 $\pm$ 0.191 & 0.564 $\pm$ 0.309 & 0.607 $\pm$ 0.164 \\
-			 SVCmMScaler & 0.549 $\pm$ 0.192 & 0.515 $\pm$ 0.247 & 0.497 $\pm$ 0.193 & \textbf{0.712 $\pm$ 0.138} \\
+			 LR          & \textbf{0.612 $\pm$ 0.086} & 0.584 $\pm$ 0.094 & \textbf{0.594 $\pm$ 0.073} & 0.598 $\pm$ 0.074 \\
+			 KNN         & 0.519 $\pm$ 0.066 & 0.548 $\pm$ 0.085 & 0.538 $\pm$ 0.074 & 0.544 $\pm$ 0.075 \\
+			 KNNSScaler  & 0.533 $\pm$ 0.080 & 0.551 $\pm$ 0.102 & 0.535 $\pm$ 0.073 & 0.519 $\pm$ 0.071 \\
+			 KNNmMScaler & 0.540 $\pm$ 0.051 & 0.525 $\pm$ 0.095 & 0.533 $\pm$ 0.065 & 0.568 $\pm$ 0.035 \\
+			 SVC         & 0.567 $\pm$ 0.072 & \textbf{0.590 $\pm$ 0.061} & 0.536 $\pm$ 0.066 & \textbf{0.600 $\pm$ 0.086} \\
+			 SVCSScaler  & 0.558 $\pm$ 0.110 & 0.578 $\pm$ 0.091 & 0.527 $\pm$ 0.050 & 0.556 $\pm$ 0.103 \\
+			 SVCmMScaler & 0.583 $\pm$ 0.110 & 0.576 $\pm$ 0.113 & 0.530 $\pm$ 0.063 & 0.597 $\pm$ 0.091 \\
 			\hline
 		\end{tabular}
-		\caption{\label{tab:bal_acc_CC} Balanced Accuracy CC}
+		\caption{\label{tab:auc_score_CC} Area bajo la curva roc CC}
 		\vspace*{2cm}
 		\begin{tabular}{c|cccc}
 			\hline
-			             & whole           & mRMR            & PCA             & PLS             \\
+			             & PCA             & PLS             & whole           & mRMR            \\
 			\hline
-			 LR          & 0.633 $\pm$ 0.216 & 0.496 $\pm$ 0.312 & 0.480 $\pm$ 0.184 & 0.752 $\pm$ 0.232 \\
-			 KNN         & 0.552 $\pm$ 0.189 & 0.512 $\pm$ 0.135 & 0.671 $\pm$ 0.185 & \textbf{0.758 $\pm$ 0.080} \\
-			 KNNSScaler  & 0.518 $\pm$ 0.174 & \textbf{0.692 $\pm$ 0.171} & 0.489 $\pm$ 0.196 & 0.711 $\pm$ 0.167 \\
-			 KNNmMScaler & \textbf{0.723 $\pm$ 0.222} & 0.651 $\pm$ 0.247 & 0.581 $\pm$ 0.250 & 0.590 $\pm$ 0.235 \\
-			 SVC         & 0.617 $\pm$ 0.176 & 0.570 $\pm$ 0.114 & 0.546 $\pm$ 0.258 & 0.635 $\pm$ 0.197 \\
-			 SVCSScaler  & 0.612 $\pm$ 0.251 & 0.681 $\pm$ 0.177 & 0.493 $\pm$ 0.174 & 0.647 $\pm$ 0.257 \\
-			 SVCmMScaler & 0.511 $\pm$ 0.204 & 0.622 $\pm$ 0.230 & \textbf{0.675 $\pm$ 0.238} & 0.605 $\pm$ 0.200 \\
+			 LR          & 0.526 $\pm$ 0.053 & \textbf{0.503 $\pm$ 0.047} & \textbf{0.539 $\pm$ 0.079} & \textbf{0.559 $\pm$ 0.093} \\
+			 KNN         & 0.470 $\pm$ 0.085 & 0.476 $\pm$ 0.103 & 0.503 $\pm$ 0.099 & 0.499 $\pm$ 0.111 \\
+			 KNNSScaler  & 0.470 $\pm$ 0.070 & 0.457 $\pm$ 0.055 & 0.498 $\pm$ 0.098 & 0.484 $\pm$ 0.112 \\
+			 KNNmMScaler & 0.463 $\pm$ 0.048 & 0.477 $\pm$ 0.084 & 0.520 $\pm$ 0.091 & 0.501 $\pm$ 0.089 \\
+			 SVC         & \textbf{0.527 $\pm$ 0.092} & 0.447 $\pm$ 0.088 & 0.530 $\pm$ 0.098 & 0.512 $\pm$ 0.084 \\
+			 SVCSScaler  & 0.509 $\pm$ 0.067 & 0.478 $\pm$ 0.103 & 0.494 $\pm$ 0.097 & 0.500 $\pm$ 0.072 \\
+			 SVCmMScaler & 0.521 $\pm$ 0.098 & 0.503 $\pm$ 0.054 & 0.526 $\pm$ 0.098 & 0.478 $\pm$ 0.064 \\
 			\hline
 		\end{tabular}
-		\caption{\label{tab:bal_acc_DCOR} Balanced Accuracy DCOR}
+		\caption{\label{tab:auc_score_DCOR} Area bajo la curva roc DCOR}
 		\vspace*{2cm}
 		\begin{tabular}{c|cccc}
 			\hline
-			             & whole           & mRMR            & PCA             & PLS             \\
+			             & PCA             & PLS             & whole           & mRMR            \\
 			\hline
-			 LR          & 0.686 $\pm$ 0.127 & 0.555 $\pm$ 0.248 & 0.622 $\pm$ 0.186 & 0.588 $\pm$ 0.204 \\
-			 LRSScaler   & 0.577 $\pm$ 0.186 & 0.558 $\pm$ 0.243 & 0.563 $\pm$ 0.212 & 0.562 $\pm$ 0.160 \\
-			 LRmMScaler  & 0.677 $\pm$ 0.237 & \textbf{0.664 $\pm$ 0.128} & 0.549 $\pm$ 0.191 & 0.537 $\pm$ 0.241 \\
-			 KNN         & \textbf{0.722 $\pm$ 0.208} & 0.651 $\pm$ 0.120 & 0.579 $\pm$ 0.135 & 0.600 $\pm$ 0.255 \\
-			 KNNSScaler  & 0.612 $\pm$ 0.164 & 0.598 $\pm$ 0.253 & 0.639 $\pm$ 0.123 & \textbf{0.625 $\pm$ 0.256} \\
-			 KNNmMScaler & 0.622 $\pm$ 0.217 & 0.608 $\pm$ 0.282 & 0.501 $\pm$ 0.130 & 0.597 $\pm$ 0.223 \\
-			 SVC         & 0.549 $\pm$ 0.185 & 0.527 $\pm$ 0.194 & 0.560 $\pm$ 0.143 & 0.507 $\pm$ 0.288 \\
-			 SVCSScaler  & 0.551 $\pm$ 0.185 & 0.495 $\pm$ 0.242 & \textbf{0.671 $\pm$ 0.165} & 0.620 $\pm$ 0.216 \\
-			 SVCmMScaler & 0.581 $\pm$ 0.217 & 0.562 $\pm$ 0.173 & 0.552 $\pm$ 0.163 & 0.559 $\pm$ 0.123 \\
+			 LR          & 0.536 $\pm$ 0.110 & \textbf{0.570 $\pm$ 0.081} & 0.543 $\pm$ 0.062 & 0.609 $\pm$ 0.091 \\
+			 LRSScaler   & \textbf{0.564 $\pm$ 0.097} & 0.570 $\pm$ 0.110 & \textbf{0.611 $\pm$ 0.062} & 0.609 $\pm$ 0.090 \\
+			 LRmMScaler  & 0.560 $\pm$ 0.103 & 0.568 $\pm$ 0.125 & 0.578 $\pm$ 0.043 & \textbf{0.613 $\pm$ 0.092} \\
+			 KNN         & 0.501 $\pm$ 0.070 & 0.565 $\pm$ 0.069 & 0.553 $\pm$ 0.086 & 0.490 $\pm$ 0.084 \\
+			 KNNSScaler  & 0.540 $\pm$ 0.073 & 0.537 $\pm$ 0.064 & 0.565 $\pm$ 0.081 & 0.580 $\pm$ 0.105 \\
+			 KNNmMScaler & 0.526 $\pm$ 0.092 & 0.530 $\pm$ 0.063 & 0.580 $\pm$ 0.080 & 0.576 $\pm$ 0.108 \\
+			 SVC         & 0.489 $\pm$ 0.114 & 0.558 $\pm$ 0.091 & 0.500 $\pm$ 0.000 & 0.522 $\pm$ 0.058 \\
+			 SVCSScaler  & 0.520 $\pm$ 0.078 & 0.534 $\pm$ 0.069 & 0.607 $\pm$ 0.098 & 0.603 $\pm$ 0.113 \\
+			 SVCmMScaler & 0.528 $\pm$ 0.078 & 0.567 $\pm$ 0.106 & 0.586 $\pm$ 0.114 & 0.603 $\pm$ 0.122 \\
 			\hline
 		\end{tabular}
-		\caption{\label{tab:bal_acc_FFT} Balanced Accuracy FFT}
+		\caption{\label{tab:auc_score_FFT} Area bajo la curva roc FFT}
 		\vspace*{2cm}
 	\end{table}
 
