Redo code for cc with dismissed curves

--- a/Transformations/data_analyisis_and_clean.ipynb
+++ b/Transformations/data_analyisis_and_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
      "data": {
       "text/plain": "<module 'Utils.pandas_utils' from 'C:\\\\Users\\\\jllav\\\\IdeaProjects\\\\TFM\\\\Utils\\\\pandas_utils.py'>"
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "uc_clean.to_csv(f\"{paths.CLEAN_DATA_PATH}/uc.csv\")\n",
@@ -325,15 +325,24 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Check data is the same\n",
     "test_fhr = pd.read_csv(f\"{paths.CLEAN_DATA_PATH}/fhr.csv\", index_col=0)\n",
@@ -355,8 +364,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   }
