Refactor transformation util functions to add min num points to cdcor

--- a/Transformations/cdcor_transformations.ipynb
+++ b/Transformations/cdcor_transformations.ipynb
@@ -91,48 +91,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "  0%|          | 0/538 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "b732929083d849dea134623dc686d7bd"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "    change constant parts for Nans\n",
-    "\"\"\"\n",
-    "threshold = 4 * 5 * 60  # 5 minutos a 4 Hz\n",
-    "for (idx_fhr, fhr_row), (idx_uc, uc_row) in tqdm(zip(fhr.iterrows(), uc.iterrows()), total=len(uc)):\n",
-    "    constant_parts_fhr = [x for x in np.split(fhr_row.index, np.where(np.diff(fhr_row.values) != 0)[0] + 1) if\n",
-    "                          x.size > threshold]\n",
-    "    constant_parts_uc = [x for x in np.split(uc_row.index, np.where(np.diff(uc_row.values) != 0)[0] + 1) if\n",
-    "                         x.size > threshold]\n",
-    "\n",
-    "    for constant_part in constant_parts_fhr:\n",
-    "        fhr_row[constant_part] = np.nan\n",
-    "\n",
-    "    for constant_part in constant_parts_uc:\n",
-    "        uc_row[constant_part] = np.nan\n",
-    "# 538/538 [07:34<00:00, 1.14it/s]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "outputs": [
     {
@@ -157,7 +115,7 @@
     "    uc_signal = pd.Series(uc_row.values)\n",
     "\n",
     "    cdcor_data[idx_fhr] = joblib.Parallel(n_jobs=8)(\n",
-    "        joblib.delayed(t_utils.dcor)(fhr_signal, t_utils.shift(uc_signal, lag))\n",
+    "        joblib.delayed(t_utils.dcor)(fhr_signal, uc_signal.shift(lag))\n",
     "        for lag in lags\n",
     "    )\n",
     "# 2:43:12<00:00, 16.74s/it"
