Redo code calculus and notes for cdcor

--- a/Transformations/cc_transformations.ipynb
+++ b/Transformations/cc_transformations.ipynb
@@ -177,7 +177,8 @@
     }
    ],
    "source": [
-    "cc_df = cc_df.drop(bad_idx)"
+    "cc_df = cc_df.drop(bad_idx, errors='ignore')\n",
+    "y = y.drop(bad_idx, errors='ignore')"
    ],
    "metadata": {
     "collapsed": false,
