--- a/Transformations/fft_transformations.ipynb
+++ b/Transformations/fft_transformations.ipynb
@@ -126,7 +126,8 @@
     "for idx_fhr, fhr_row in tqdm(fhr.copy().iterrows(), total=len(fhr)):\n",
     "    fhr_signal = fhr_row.values\n",
     "\n",
-    "    fft_data[idx_fhr] = t_utils.nan_save_fft(fhr_signal, freqs)\n"
+    "    fft_data[idx_fhr] = t_utils.nan_save_fft(fhr_signal, freqs)\n",
+    "# 536/536 [20:08<00:00, 2.68s/it]"
    ],
    "metadata": {
     "collapsed": false,
