--- a/Experiments/Latex/BAL_ACC_results_pre.tex
+++ b/Experiments/Latex/BAL_ACC_results_pre.tex
@@ -21,47 +21,47 @@
 		\setlength{\belowrulesep}{0pt}
 		\begin{tabular}{c|cccc}
 			\hline
-			             & PCA             & PLS             & whole           & mRMR            \\
+			             & mRMR            & PCA             & PLS             & whole           \\
 			\hline
-			 LR          & \textbf{0.566 $\pm$ 0.069} & 0.554 $\pm$ 0.077 & 0.554 $\pm$ 0.067 & 0.566 $\pm$ 0.061 \\
-			 KNN         & 0.516 $\pm$ 0.057 & 0.505 $\pm$ 0.059 & 0.530 $\pm$ 0.069 & \textbf{0.537 $\pm$ 0.054} \\
-			 KNNSScaler  & 0.519 $\pm$ 0.046 & \textbf{0.520 $\pm$ 0.071} & 0.503 $\pm$ 0.044 & 0.484 $\pm$ 0.041 \\
-			 KNNmMScaler & 0.520 $\pm$ 0.038 & 0.521 $\pm$ 0.084 & 0.508 $\pm$ 0.049 & \textbf{0.532 $\pm$ 0.045} \\
-			 SVC         & 0.560 $\pm$ 0.063 & 0.571 $\pm$ 0.049 & 0.545 $\pm$ 0.034 & \textbf{0.580 $\pm$ 0.075} \\
-			 SVCSScaler  & 0.515 $\pm$ 0.078 & \textbf{0.553 $\pm$ 0.059} & 0.513 $\pm$ 0.052 & 0.536 $\pm$ 0.066 \\
-			 SVCmMScaler & 0.556 $\pm$ 0.070 & 0.562 $\pm$ 0.095 & 0.518 $\pm$ 0.039 & \textbf{0.574 $\pm$ 0.081} \\
+			 LR          & 0.560 $\pm$ 0.100 & \textbf{0.567 $\pm$ 0.054} & 0.545 $\pm$ 0.061 & 0.554 $\pm$ 0.091 \\
+			 KNN         & 0.474 $\pm$ 0.049 & 0.521 $\pm$ 0.064 & 0.517 $\pm$ 0.065 & \textbf{0.530 $\pm$ 0.035} \\
+			 KNNSScaler  & 0.518 $\pm$ 0.053 & 0.523 $\pm$ 0.048 & \textbf{0.526 $\pm$ 0.064} & 0.522 $\pm$ 0.038 \\
+			 KNNmMScaler & 0.505 $\pm$ 0.062 & 0.497 $\pm$ 0.054 & 0.502 $\pm$ 0.059 & \textbf{0.529 $\pm$ 0.060} \\
+			 SVC         & 0.520 $\pm$ 0.052 & \textbf{0.533 $\pm$ 0.074} & 0.531 $\pm$ 0.050 & 0.527 $\pm$ 0.050 \\
+			 SVCSScaler  & 0.525 $\pm$ 0.080 & 0.516 $\pm$ 0.063 & 0.524 $\pm$ 0.033 & \textbf{0.540 $\pm$ 0.097} \\
+			 SVCmMScaler & 0.553 $\pm$ 0.043 & \textbf{0.571 $\pm$ 0.055} & 0.522 $\pm$ 0.048 & 0.541 $\pm$ 0.063 \\
 			\hline
 		\end{tabular}
 		\caption{\label{tab:bal_acc_CC} Balanced Accuracy CC}
 		\vspace*{2cm}
 		\begin{tabular}{c|cccc}
 			\hline
-			             & PCA             & PLS             & whole           & mRMR            \\
+			             & mRMR            & PCA             & PLS             & whole           \\
 			\hline
-			 LR          & \textbf{0.543 $\pm$ 0.057} & 0.500 $\pm$ 0.028 & 0.539 $\pm$ 0.055 & 0.537 $\pm$ 0.083 \\
-			 KNN         & \textbf{0.501 $\pm$ 0.078} & 0.501 $\pm$ 0.052 & 0.477 $\pm$ 0.061 & 0.498 $\pm$ 0.086 \\
-			 KNNSScaler  & \textbf{0.519 $\pm$ 0.069} & 0.482 $\pm$ 0.049 & 0.490 $\pm$ 0.067 & 0.486 $\pm$ 0.081 \\
-			 KNNmMScaler & 0.501 $\pm$ 0.064 & 0.482 $\pm$ 0.049 & \textbf{0.509 $\pm$ 0.081} & 0.505 $\pm$ 0.082 \\
-			 SVC         & \textbf{0.533 $\pm$ 0.076} & 0.440 $\pm$ 0.058 & 0.520 $\pm$ 0.045 & 0.504 $\pm$ 0.090 \\
-			 SVCSScaler  & 0.501 $\pm$ 0.055 & 0.468 $\pm$ 0.088 & \textbf{0.512 $\pm$ 0.089} & 0.495 $\pm$ 0.088 \\
-			 SVCmMScaler & 0.499 $\pm$ 0.080 & 0.481 $\pm$ 0.066 & \textbf{0.515 $\pm$ 0.080} & 0.485 $\pm$ 0.080 \\
+			 LR          & 0.503 $\pm$ 0.065 & 0.485 $\pm$ 0.041 & \textbf{0.510 $\pm$ 0.058} & 0.479 $\pm$ 0.051 \\
+			 KNN         & 0.490 $\pm$ 0.033 & 0.480 $\pm$ 0.031 & \textbf{0.497 $\pm$ 0.056} & 0.493 $\pm$ 0.039 \\
+			 KNNSScaler  & 0.494 $\pm$ 0.017 & 0.497 $\pm$ 0.064 & \textbf{0.513 $\pm$ 0.067} & 0.485 $\pm$ 0.061 \\
+			 KNNmMScaler & 0.500 $\pm$ 0.035 & 0.492 $\pm$ 0.048 & \textbf{0.525 $\pm$ 0.062} & 0.502 $\pm$ 0.082 \\
+			 SVC         & \textbf{0.473 $\pm$ 0.066} & 0.432 $\pm$ 0.049 & 0.458 $\pm$ 0.069 & 0.463 $\pm$ 0.045 \\
+			 SVCSScaler  & 0.461 $\pm$ 0.079 & 0.460 $\pm$ 0.061 & \textbf{0.502 $\pm$ 0.062} & 0.499 $\pm$ 0.029 \\
+			 SVCmMScaler & 0.452 $\pm$ 0.074 & 0.456 $\pm$ 0.059 & \textbf{0.510 $\pm$ 0.089} & 0.439 $\pm$ 0.051 \\
 			\hline
 		\end{tabular}
 		\caption{\label{tab:bal_acc_DCOR} Balanced Accuracy DCOR}
 		\vspace*{2cm}
 		\begin{tabular}{c|cccc}
 			\hline
-			             & PCA             & PLS             & whole           & mRMR            \\
+			             & mRMR            & PCA             & PLS             & whole           \\
 			\hline
-			 LR          & 0.515 $\pm$ 0.094 & 0.566 $\pm$ 0.066 & 0.539 $\pm$ 0.064 & \textbf{0.598 $\pm$ 0.068} \\
-			 LRSScaler   & 0.555 $\pm$ 0.069 & 0.553 $\pm$ 0.079 & \textbf{0.599 $\pm$ 0.057} & 0.580 $\pm$ 0.072 \\
-			 LRmMScaler  & 0.540 $\pm$ 0.090 & 0.545 $\pm$ 0.096 & 0.571 $\pm$ 0.035 & \textbf{0.591 $\pm$ 0.071} \\
-			 KNN         & 0.502 $\pm$ 0.048 & \textbf{0.564 $\pm$ 0.069} & 0.500 $\pm$ 0.046 & 0.534 $\pm$ 0.047 \\
-			 KNNSScaler  & 0.508 $\pm$ 0.044 & 0.523 $\pm$ 0.049 & 0.530 $\pm$ 0.049 & \textbf{0.555 $\pm$ 0.059} \\
-			 KNNmMScaler & 0.504 $\pm$ 0.054 & 0.522 $\pm$ 0.052 & 0.527 $\pm$ 0.051 & \textbf{0.541 $\pm$ 0.062} \\
-			 SVC         & 0.504 $\pm$ 0.054 & \textbf{0.541 $\pm$ 0.053} & 0.500 $\pm$ 0.000 & 0.486 $\pm$ 0.032 \\
-			 SVCSScaler  & 0.544 $\pm$ 0.072 & 0.537 $\pm$ 0.054 & 0.566 $\pm$ 0.093 & \textbf{0.595 $\pm$ 0.084} \\
-			 SVCmMScaler & 0.538 $\pm$ 0.072 & 0.559 $\pm$ 0.090 & 0.525 $\pm$ 0.076 & \textbf{0.575 $\pm$ 0.080} \\
+			 LR          & \textbf{0.551 $\pm$ 0.071} & 0.543 $\pm$ 0.065 & 0.546 $\pm$ 0.032 & 0.500 $\pm$ 0.073 \\
+			 LRSScaler   & 0.540 $\pm$ 0.062 & 0.545 $\pm$ 0.070 & 0.545 $\pm$ 0.044 & \textbf{0.564 $\pm$ 0.046} \\
+			 LRmMScaler  & \textbf{0.557 $\pm$ 0.068} & 0.550 $\pm$ 0.062 & 0.548 $\pm$ 0.038 & 0.543 $\pm$ 0.056 \\
+			 KNN         & 0.519 $\pm$ 0.038 & \textbf{0.541 $\pm$ 0.043} & 0.519 $\pm$ 0.038 & 0.511 $\pm$ 0.038 \\
+			 KNNSScaler  & 0.502 $\pm$ 0.054 & 0.511 $\pm$ 0.035 & \textbf{0.521 $\pm$ 0.039} & 0.503 $\pm$ 0.046 \\
+			 KNNmMScaler & 0.523 $\pm$ 0.057 & \textbf{0.528 $\pm$ 0.051} & 0.512 $\pm$ 0.058 & 0.487 $\pm$ 0.042 \\
+			 SVC         & 0.516 $\pm$ 0.039 & 0.506 $\pm$ 0.074 & \textbf{0.553 $\pm$ 0.048} & 0.500 $\pm$ 0.000 \\
+			 SVCSScaler  & 0.552 $\pm$ 0.096 & \textbf{0.561 $\pm$ 0.071} & 0.516 $\pm$ 0.046 & 0.543 $\pm$ 0.041 \\
+			 SVCmMScaler & 0.556 $\pm$ 0.104 & \textbf{0.591 $\pm$ 0.070} & 0.519 $\pm$ 0.037 & 0.543 $\pm$ 0.039 \\
 			\hline
 		\end{tabular}
 		\caption{\label{tab:bal_acc_FFT} Balanced Accuracy FFT}
