--- a/Experiments/Latex/test_pyLatex.tex
+++ b/Experiments/Latex/test_pyLatex.tex
@@ -32,31 +32,31 @@
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.480 $\pm$ 0.031&\textbf{0.497 $\pm$ 0.056}&0.490 $\pm$ 0.033&0.493 $\pm$ 0.039\\%
+\multicolumn{1}{c|}{}&DCOR&0.480 $\pm$ 0.031&0.497 $\pm$ 0.056&0.490 $\pm$ 0.033&0.493 $\pm$ 0.039\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&\textbf{0.541 $\pm$ 0.043}&0.519 $\pm$ 0.038&0.519 $\pm$ 0.038&0.511 $\pm$ 0.038\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.541 $\pm$ 0.043}&\textbf{0.519 $\pm$ 0.038}&\textbf{0.519 $\pm$ 0.038}&0.511 $\pm$ 0.038\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{KNNSScaler}}&CC&0.523 $\pm$ 0.048&\textbf{0.526 $\pm$ 0.064}&0.518 $\pm$ 0.053&0.522 $\pm$ 0.038\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{KNNSScaler}}&CC&\textbf{0.523 $\pm$ 0.048}&\textbf{0.526 $\pm$ 0.064}&\textbf{0.518 $\pm$ 0.053}&\textbf{0.522 $\pm$ 0.038}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.497 $\pm$ 0.064&\textbf{0.513 $\pm$ 0.067}&0.494 $\pm$ 0.017&0.485 $\pm$ 0.061\\%
+\multicolumn{1}{c|}{}&DCOR&0.497 $\pm$ 0.064&0.513 $\pm$ 0.067&0.494 $\pm$ 0.017&0.485 $\pm$ 0.061\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.511 $\pm$ 0.035&\textbf{0.521 $\pm$ 0.039}&0.502 $\pm$ 0.054&0.503 $\pm$ 0.046\\%
+\multicolumn{1}{c|}{}&FFT&0.511 $\pm$ 0.035&0.521 $\pm$ 0.039&0.502 $\pm$ 0.054&0.503 $\pm$ 0.046\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{LR}}&CC&\textbf{0.567 $\pm$ 0.054}&0.545 $\pm$ 0.061&0.560 $\pm$ 0.100&0.554 $\pm$ 0.091\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{LR}}&CC&\textbf{0.567 $\pm$ 0.054}&0.545 $\pm$ 0.061&\textbf{0.560 $\pm$ 0.100}&\textbf{0.554 $\pm$ 0.091}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.485 $\pm$ 0.041&\textbf{0.510 $\pm$ 0.058}&0.503 $\pm$ 0.065&0.479 $\pm$ 0.051\\%
+\multicolumn{1}{c|}{}&DCOR&0.485 $\pm$ 0.041&0.510 $\pm$ 0.058&0.503 $\pm$ 0.065&0.479 $\pm$ 0.051\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.543 $\pm$ 0.065&0.546 $\pm$ 0.032&\textbf{0.551 $\pm$ 0.071}&0.500 $\pm$ 0.073\\%
+\multicolumn{1}{c|}{}&FFT&0.543 $\pm$ 0.065&\textbf{0.546 $\pm$ 0.032}&0.551 $\pm$ 0.071&0.500 $\pm$ 0.073\\%
 \specialrule{.2em}{.1em}{.1em}%
 \multicolumn{1}{c|}{\multirow{3}{*}{LRSScaler}}&CC&No converge&No converge&No converge&No converge\\%
 \cline{2%
@@ -66,27 +66,27 @@
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.545 $\pm$ 0.070&0.545 $\pm$ 0.044&0.540 $\pm$ 0.062&\textbf{0.564 $\pm$ 0.046}\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.545 $\pm$ 0.070}&\textbf{0.545 $\pm$ 0.044}&\textbf{0.540 $\pm$ 0.062}&\textbf{0.564 $\pm$ 0.046}\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{SVC}}&CC&\textbf{0.533 $\pm$ 0.074}&0.531 $\pm$ 0.050&0.520 $\pm$ 0.052&0.527 $\pm$ 0.050\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{SVC}}&CC&\textbf{0.533 $\pm$ 0.074}&0.531 $\pm$ 0.050&\textbf{0.520 $\pm$ 0.052}&\textbf{0.527 $\pm$ 0.050}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.432 $\pm$ 0.049&0.458 $\pm$ 0.069&\textbf{0.473 $\pm$ 0.066}&0.463 $\pm$ 0.045\\%
+\multicolumn{1}{c|}{}&DCOR&0.432 $\pm$ 0.049&0.458 $\pm$ 0.069&0.473 $\pm$ 0.066&0.463 $\pm$ 0.045\\%
 \cline{2%
 -%
 6}%
 \multicolumn{1}{c|}{}&FFT&0.506 $\pm$ 0.074&\textbf{0.553 $\pm$ 0.048}&0.516 $\pm$ 0.039&0.500 $\pm$ 0.000\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{SVCSScaler}}&CC&0.516 $\pm$ 0.063&0.524 $\pm$ 0.033&0.525 $\pm$ 0.080&\textbf{0.540 $\pm$ 0.097}\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{SVCSScaler}}&CC&0.516 $\pm$ 0.063&\textbf{0.524 $\pm$ 0.033}&0.525 $\pm$ 0.080&0.540 $\pm$ 0.097\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.460 $\pm$ 0.061&\textbf{0.502 $\pm$ 0.062}&0.461 $\pm$ 0.079&0.499 $\pm$ 0.029\\%
+\multicolumn{1}{c|}{}&DCOR&0.460 $\pm$ 0.061&0.502 $\pm$ 0.062&0.461 $\pm$ 0.079&0.499 $\pm$ 0.029\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&\textbf{0.561 $\pm$ 0.071}&0.516 $\pm$ 0.046&0.552 $\pm$ 0.096&0.543 $\pm$ 0.041\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.561 $\pm$ 0.071}&0.516 $\pm$ 0.046&\textbf{0.552 $\pm$ 0.096}&\textbf{0.543 $\pm$ 0.041}\\%
 \specialrule{.2em}{.1em}{.1em}%
 \end{tabular}%
 }%
@@ -101,7 +101,7 @@
 \begin{tabular}{cc|c|c|c|c}%
 &&PCA&PLS&mRMR&whole\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{KNN}}&CC&\textbf{0.577 $\pm$ 0.079}&0.515 $\pm$ 0.078&0.514 $\pm$ 0.059&0.546 $\pm$ 0.090\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{KNN}}&CC&\textbf{0.577 $\pm$ 0.079}&0.515 $\pm$ 0.078&\textbf{0.514 $\pm$ 0.059}&\textbf{0.546 $\pm$ 0.090}\\%
 \cline{2%
 -%
 6}%
@@ -109,23 +109,23 @@
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.524 $\pm$ 0.075&0.485 $\pm$ 0.049&0.509 $\pm$ 0.076&\textbf{0.534 $\pm$ 0.102}\\%
+\multicolumn{1}{c|}{}&FFT&0.524 $\pm$ 0.075&0.485 $\pm$ 0.049&0.509 $\pm$ 0.076&0.534 $\pm$ 0.102\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{KNNSScaler}}&CC&0.488 $\pm$ 0.062&0.525 $\pm$ 0.090&0.553 $\pm$ 0.073&\textbf{0.576 $\pm$ 0.072}\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{KNNSScaler}}&CC&0.488 $\pm$ 0.062&\textbf{0.525 $\pm$ 0.090}&\textbf{0.553 $\pm$ 0.073}&\textbf{0.576 $\pm$ 0.072}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&\textbf{0.501 $\pm$ 0.074}&0.497 $\pm$ 0.104&0.458 $\pm$ 0.055&0.454 $\pm$ 0.083\\%
+\multicolumn{1}{c|}{}&DCOR&0.501 $\pm$ 0.074&0.497 $\pm$ 0.104&0.458 $\pm$ 0.055&0.454 $\pm$ 0.083\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.509 $\pm$ 0.087&0.513 $\pm$ 0.053&\textbf{0.542 $\pm$ 0.042}&0.533 $\pm$ 0.067\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.509 $\pm$ 0.087}&0.513 $\pm$ 0.053&0.542 $\pm$ 0.042&0.533 $\pm$ 0.067\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{LR}}&CC&\textbf{0.598 $\pm$ 0.065}&0.578 $\pm$ 0.052&0.581 $\pm$ 0.092&0.578 $\pm$ 0.086\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{LR}}&CC&\textbf{0.598 $\pm$ 0.065}&\textbf{0.578 $\pm$ 0.052}&0.581 $\pm$ 0.092&\textbf{0.578 $\pm$ 0.086}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.473 $\pm$ 0.057&\textbf{0.513 $\pm$ 0.099}&0.511 $\pm$ 0.073&0.504 $\pm$ 0.057\\%
+\multicolumn{1}{c|}{}&DCOR&0.473 $\pm$ 0.057&0.513 $\pm$ 0.099&0.511 $\pm$ 0.073&0.504 $\pm$ 0.057\\%
 \cline{2%
 -%
 6}%
@@ -139,27 +139,27 @@
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.582 $\pm$ 0.091&0.558 $\pm$ 0.054&\textbf{0.586 $\pm$ 0.062}&0.578 $\pm$ 0.061\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.582 $\pm$ 0.091}&\textbf{0.558 $\pm$ 0.054}&\textbf{0.586 $\pm$ 0.062}&\textbf{0.578 $\pm$ 0.061}\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{SVC}}&CC&0.523 $\pm$ 0.076&\textbf{0.557 $\pm$ 0.078}&0.529 $\pm$ 0.090&0.546 $\pm$ 0.067\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{SVC}}&CC&\textbf{0.523 $\pm$ 0.076}&\textbf{0.557 $\pm$ 0.078}&0.529 $\pm$ 0.090&\textbf{0.546 $\pm$ 0.067}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.426 $\pm$ 0.070&\textbf{0.463 $\pm$ 0.112}&0.446 $\pm$ 0.082&0.438 $\pm$ 0.060\\%
+\multicolumn{1}{c|}{}&DCOR&0.426 $\pm$ 0.070&0.463 $\pm$ 0.112&0.446 $\pm$ 0.082&0.438 $\pm$ 0.060\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.482 $\pm$ 0.096&\textbf{0.552 $\pm$ 0.042}&0.541 $\pm$ 0.083&0.500 $\pm$ 0.000\\%
+\multicolumn{1}{c|}{}&FFT&0.482 $\pm$ 0.096&0.552 $\pm$ 0.042&\textbf{0.541 $\pm$ 0.083}&0.500 $\pm$ 0.000\\%
 \specialrule{.2em}{.1em}{.1em}%
 \multicolumn{1}{c|}{\multirow{3}{*}{SVCSScaler}}&CC&0.544 $\pm$ 0.064&\textbf{0.564 $\pm$ 0.053}&0.528 $\pm$ 0.081&0.559 $\pm$ 0.067\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.466 $\pm$ 0.076&\textbf{0.520 $\pm$ 0.106}&0.454 $\pm$ 0.086&0.469 $\pm$ 0.074\\%
+\multicolumn{1}{c|}{}&DCOR&0.466 $\pm$ 0.076&0.520 $\pm$ 0.106&0.454 $\pm$ 0.086&0.469 $\pm$ 0.074\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&\textbf{0.581 $\pm$ 0.091}&0.536 $\pm$ 0.046&0.563 $\pm$ 0.113&0.571 $\pm$ 0.047\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.581 $\pm$ 0.091}&0.536 $\pm$ 0.046&\textbf{0.563 $\pm$ 0.113}&\textbf{0.571 $\pm$ 0.047}\\%
 \specialrule{.2em}{.1em}{.1em}%
 \end{tabular}%
 }%
