More fake results to improve latex export and boxplots of results of 10-fold experiments

--- a/Transformations/data_analyisis_and_clean.ipynb
+++ b/Transformations/data_analyisis_and_clean.ipynb
@@ -243,7 +243,7 @@
     "uc_clean = uc.copy()\n",
     "y_clean = y.copy()\n",
     "\n",
-    "threshold = 5 * 4 # % segundos 4 Hz\n",
+    "threshold = 5 * 4 # 5 segundos 4 Hz\n",
     "for (idx_fhr, fhr_row), (idx_uc, uc_row) in tqdm(zip(fhr_clean.iterrows(), uc_clean.iterrows()), total=len(uc_clean)):\n",
     "    # Remove extreme data\n",
     "    fhr_row[(fhr_row <= 0) | (fhr_row >= 250)] = np.nan\n",
