--- a/Experiments/Latex/results_by_classifiers_col.tex
+++ b/Experiments/Latex/results_by_classifiers_col.tex
@@ -28,35 +28,35 @@
 \begin{tabular}{cc|c|c|c|c}%
 &&PCA&PLS&mRMR&whole\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{KNN}}&CC&0.521 $\pm$ 0.064&0.517 $\pm$ 0.065&0.474 $\pm$ 0.049&\textbf{0.530 $\pm$ 0.035}\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{KNN}}&CC&\textbf{0.523 $\pm$ 0.034}&0.515 $\pm$ 0.032&\textbf{0.512 $\pm$ 0.033}&\textbf{0.519 $\pm$ 0.028}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.480 $\pm$ 0.031&0.497 $\pm$ 0.056&0.490 $\pm$ 0.033&0.493 $\pm$ 0.039\\%
+\multicolumn{1}{c|}{}&DCOR&0.491 $\pm$ 0.038&0.498 $\pm$ 0.031&0.502 $\pm$ 0.032&0.496 $\pm$ 0.026\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&\textbf{0.541 $\pm$ 0.043}&\textbf{0.519 $\pm$ 0.038}&\textbf{0.519 $\pm$ 0.038}&0.511 $\pm$ 0.038\\%
+\multicolumn{1}{c|}{}&FFT&0.522 $\pm$ 0.039&\textbf{0.528 $\pm$ 0.038}&0.511 $\pm$ 0.031&0.513 $\pm$ 0.027\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{KNNSScaler}}&CC&\textbf{0.523 $\pm$ 0.048}&\textbf{0.526 $\pm$ 0.064}&\textbf{0.518 $\pm$ 0.053}&\textbf{0.522 $\pm$ 0.038}\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{KNNSScaler}}&CC&0.507 $\pm$ 0.033&0.516 $\pm$ 0.033&0.515 $\pm$ 0.035&\textbf{0.513 $\pm$ 0.032}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.497 $\pm$ 0.064&0.513 $\pm$ 0.067&0.494 $\pm$ 0.017&0.485 $\pm$ 0.061\\%
+\multicolumn{1}{c|}{}&DCOR&0.504 $\pm$ 0.034&0.502 $\pm$ 0.035&0.502 $\pm$ 0.029&0.491 $\pm$ 0.029\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.511 $\pm$ 0.035&0.521 $\pm$ 0.039&0.502 $\pm$ 0.054&0.503 $\pm$ 0.046\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.519 $\pm$ 0.031}&\textbf{0.518 $\pm$ 0.038}&\textbf{0.516 $\pm$ 0.038}&0.506 $\pm$ 0.030\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{LR}}&CC&\textbf{0.567 $\pm$ 0.054}&0.545 $\pm$ 0.061&\textbf{0.560 $\pm$ 0.100}&\textbf{0.554 $\pm$ 0.091}\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{LR}}&CC&\textbf{0.569 $\pm$ 0.040}&\textbf{0.549 $\pm$ 0.044}&0.551 $\pm$ 0.044&\textbf{0.548 $\pm$ 0.043}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.485 $\pm$ 0.041&0.510 $\pm$ 0.058&0.503 $\pm$ 0.065&0.479 $\pm$ 0.051\\%
+\multicolumn{1}{c|}{}&DCOR&0.491 $\pm$ 0.034&0.508 $\pm$ 0.048&0.507 $\pm$ 0.036&0.499 $\pm$ 0.043\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.543 $\pm$ 0.065&\textbf{0.546 $\pm$ 0.032}&0.551 $\pm$ 0.071&0.500 $\pm$ 0.073\\%
+\multicolumn{1}{c|}{}&FFT&0.534 $\pm$ 0.045&0.538 $\pm$ 0.041&\textbf{0.564 $\pm$ 0.039}&0.506 $\pm$ 0.043\\%
 \specialrule{.2em}{.1em}{.1em}%
 \multicolumn{1}{c|}{\multirow{3}{*}{LRSScaler}}&CC&No converge&No converge&No converge&No converge\\%
 \cline{2%
@@ -66,27 +66,27 @@
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&\textbf{0.545 $\pm$ 0.070}&\textbf{0.545 $\pm$ 0.044}&\textbf{0.540 $\pm$ 0.062}&\textbf{0.564 $\pm$ 0.046}\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.527 $\pm$ 0.043}&\textbf{0.539 $\pm$ 0.044}&\textbf{0.564 $\pm$ 0.040}&\textbf{0.543 $\pm$ 0.048}\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{SVC}}&CC&\textbf{0.533 $\pm$ 0.074}&0.531 $\pm$ 0.050&\textbf{0.520 $\pm$ 0.052}&\textbf{0.527 $\pm$ 0.050}\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{SVC}}&CC&\textbf{0.525 $\pm$ 0.041}&0.526 $\pm$ 0.039&\textbf{0.541 $\pm$ 0.043}&\textbf{0.528 $\pm$ 0.040}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.432 $\pm$ 0.049&0.458 $\pm$ 0.069&0.473 $\pm$ 0.066&0.463 $\pm$ 0.045\\%
+\multicolumn{1}{c|}{}&DCOR&0.474 $\pm$ 0.035&0.496 $\pm$ 0.045&0.489 $\pm$ 0.037&0.479 $\pm$ 0.031\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.506 $\pm$ 0.074&\textbf{0.553 $\pm$ 0.048}&0.516 $\pm$ 0.039&0.500 $\pm$ 0.000\\%
+\multicolumn{1}{c|}{}&FFT&0.510 $\pm$ 0.030&\textbf{0.532 $\pm$ 0.044}&0.517 $\pm$ 0.033&0.500 $\pm$ 0.000\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{SVCSScaler}}&CC&0.516 $\pm$ 0.063&\textbf{0.524 $\pm$ 0.033}&0.525 $\pm$ 0.080&0.540 $\pm$ 0.097\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{SVCSScaler}}&CC&0.532 $\pm$ 0.047&\textbf{0.527 $\pm$ 0.042}&0.536 $\pm$ 0.047&0.532 $\pm$ 0.037\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.460 $\pm$ 0.061&0.502 $\pm$ 0.062&0.461 $\pm$ 0.079&0.499 $\pm$ 0.029\\%
+\multicolumn{1}{c|}{}&DCOR&0.478 $\pm$ 0.039&0.508 $\pm$ 0.044&0.486 $\pm$ 0.043&0.486 $\pm$ 0.027\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&\textbf{0.561 $\pm$ 0.071}&0.516 $\pm$ 0.046&\textbf{0.552 $\pm$ 0.096}&\textbf{0.543 $\pm$ 0.041}\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.539 $\pm$ 0.044}&0.524 $\pm$ 0.043&\textbf{0.555 $\pm$ 0.043}&\textbf{0.555 $\pm$ 0.035}\\%
 \specialrule{.2em}{.1em}{.1em}%
 \end{tabular}%
 }%
@@ -101,35 +101,35 @@
 \begin{tabular}{cc|c|c|c|c}%
 &&PCA&PLS&mRMR&whole\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{KNN}}&CC&\textbf{0.577 $\pm$ 0.079}&0.515 $\pm$ 0.078&\textbf{0.514 $\pm$ 0.059}&\textbf{0.546 $\pm$ 0.090}\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{KNN}}&CC&\textbf{0.557 $\pm$ 0.051}&0.528 $\pm$ 0.046&\textbf{0.531 $\pm$ 0.042}&\textbf{0.550 $\pm$ 0.048}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.477 $\pm$ 0.081&\textbf{0.521 $\pm$ 0.087}&0.452 $\pm$ 0.078&0.447 $\pm$ 0.088\\%
+\multicolumn{1}{c|}{}&DCOR&0.479 $\pm$ 0.050&0.499 $\pm$ 0.052&0.487 $\pm$ 0.056&0.472 $\pm$ 0.054\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.524 $\pm$ 0.075&0.485 $\pm$ 0.049&0.509 $\pm$ 0.076&0.534 $\pm$ 0.102\\%
+\multicolumn{1}{c|}{}&FFT&0.533 $\pm$ 0.048&\textbf{0.544 $\pm$ 0.054}&0.527 $\pm$ 0.049&0.528 $\pm$ 0.047\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{KNNSScaler}}&CC&0.488 $\pm$ 0.062&\textbf{0.525 $\pm$ 0.090}&\textbf{0.553 $\pm$ 0.073}&\textbf{0.576 $\pm$ 0.072}\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{KNNSScaler}}&CC&0.516 $\pm$ 0.047&\textbf{0.520 $\pm$ 0.047}&0.534 $\pm$ 0.042&\textbf{0.551 $\pm$ 0.053}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.501 $\pm$ 0.074&0.497 $\pm$ 0.104&0.458 $\pm$ 0.055&0.454 $\pm$ 0.083\\%
+\multicolumn{1}{c|}{}&DCOR&0.502 $\pm$ 0.050&0.500 $\pm$ 0.052&0.486 $\pm$ 0.050&0.475 $\pm$ 0.047\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&\textbf{0.509 $\pm$ 0.087}&0.513 $\pm$ 0.053&0.542 $\pm$ 0.042&0.533 $\pm$ 0.067\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.534 $\pm$ 0.047}&0.520 $\pm$ 0.049&\textbf{0.535 $\pm$ 0.050}&0.546 $\pm$ 0.055\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{LR}}&CC&\textbf{0.598 $\pm$ 0.065}&\textbf{0.578 $\pm$ 0.052}&0.581 $\pm$ 0.092&\textbf{0.578 $\pm$ 0.086}\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{LR}}&CC&\textbf{0.595 $\pm$ 0.045}&\textbf{0.568 $\pm$ 0.049}&0.570 $\pm$ 0.049&\textbf{0.572 $\pm$ 0.043}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.473 $\pm$ 0.057&0.513 $\pm$ 0.099&0.511 $\pm$ 0.073&0.504 $\pm$ 0.057\\%
+\multicolumn{1}{c|}{}&DCOR&0.488 $\pm$ 0.040&0.512 $\pm$ 0.051&0.509 $\pm$ 0.046&0.501 $\pm$ 0.044\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.574 $\pm$ 0.101&0.567 $\pm$ 0.043&\textbf{0.604 $\pm$ 0.082}&0.479 $\pm$ 0.076\\%
+\multicolumn{1}{c|}{}&FFT&0.553 $\pm$ 0.055&0.556 $\pm$ 0.053&\textbf{0.583 $\pm$ 0.046}&0.506 $\pm$ 0.048\\%
 \specialrule{.2em}{.1em}{.1em}%
 \multicolumn{1}{c|}{\multirow{3}{*}{LRSScaler}}&CC&No converge&No converge&No converge&No converge\\%
 \cline{2%
@@ -139,27 +139,27 @@
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&\textbf{0.582 $\pm$ 0.091}&\textbf{0.558 $\pm$ 0.054}&\textbf{0.586 $\pm$ 0.062}&\textbf{0.578 $\pm$ 0.061}\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.545 $\pm$ 0.057}&\textbf{0.559 $\pm$ 0.054}&\textbf{0.579 $\pm$ 0.049}&\textbf{0.553 $\pm$ 0.058}\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{SVC}}&CC&\textbf{0.523 $\pm$ 0.076}&\textbf{0.557 $\pm$ 0.078}&0.529 $\pm$ 0.090&\textbf{0.546 $\pm$ 0.067}\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{SVC}}&CC&\textbf{0.536 $\pm$ 0.052}&0.540 $\pm$ 0.046&\textbf{0.552 $\pm$ 0.048}&\textbf{0.537 $\pm$ 0.049}\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.426 $\pm$ 0.070&0.463 $\pm$ 0.112&0.446 $\pm$ 0.082&0.438 $\pm$ 0.060\\%
+\multicolumn{1}{c|}{}&DCOR&0.465 $\pm$ 0.045&0.495 $\pm$ 0.055&0.488 $\pm$ 0.051&0.475 $\pm$ 0.049\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&0.482 $\pm$ 0.096&0.552 $\pm$ 0.042&\textbf{0.541 $\pm$ 0.083}&0.500 $\pm$ 0.000\\%
+\multicolumn{1}{c|}{}&FFT&0.504 $\pm$ 0.049&\textbf{0.554 $\pm$ 0.058}&0.545 $\pm$ 0.051&0.500 $\pm$ 0.000\\%
 \specialrule{.2em}{.1em}{.1em}%
-\multicolumn{1}{c|}{\multirow{3}{*}{SVCSScaler}}&CC&0.544 $\pm$ 0.064&\textbf{0.564 $\pm$ 0.053}&0.528 $\pm$ 0.081&0.559 $\pm$ 0.067\\%
+\multicolumn{1}{c|}{\multirow{3}{*}{SVCSScaler}}&CC&0.547 $\pm$ 0.058&0.540 $\pm$ 0.051&0.545 $\pm$ 0.050&0.548 $\pm$ 0.045\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&DCOR&0.466 $\pm$ 0.076&0.520 $\pm$ 0.106&0.454 $\pm$ 0.086&0.469 $\pm$ 0.074\\%
+\multicolumn{1}{c|}{}&DCOR&0.474 $\pm$ 0.044&0.511 $\pm$ 0.051&0.483 $\pm$ 0.053&0.468 $\pm$ 0.060\\%
 \cline{2%
 -%
 6}%
-\multicolumn{1}{c|}{}&FFT&\textbf{0.581 $\pm$ 0.091}&0.536 $\pm$ 0.046&\textbf{0.563 $\pm$ 0.113}&\textbf{0.571 $\pm$ 0.047}\\%
+\multicolumn{1}{c|}{}&FFT&\textbf{0.555 $\pm$ 0.053}&\textbf{0.542 $\pm$ 0.054}&\textbf{0.574 $\pm$ 0.050}&\textbf{0.585 $\pm$ 0.047}\\%
 \specialrule{.2em}{.1em}{.1em}%
 \end{tabular}%
 }%
