Refactor to function to quick filter curves and more plot functions. Change typos on some plots.

--- a/Transformations/fft_transformations.ipynb
+++ b/Transformations/fft_transformations.ipynb
@@ -327,7 +327,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
-    "sns.barplot(x='index', y='ph', data=pd.DataFrame(y.value_counts(normalize=True)).reset_index())\n",
+    "sns.barplot(x='class', y='%', data=pd.DataFrame(y.value_counts(normalize=True)).reset_index())\n",
     "plt.savefig(f\"{paths.FFT_DATA_PLOTS}/Class_Distribution.png\")\n",
     "plt.savefig(f\"{paths.FFT_DATA_PLOTS}/Class_Distribution.pdf\")"
    ],
