Clean data save

--- a/Transformations/filter_data.ipynb
+++ b/Transformations/filter_data.ipynb
@@ -648,6 +648,60 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "cc_df.to_csv(f\"{paths.CC_DATA_PATH}/clean_cc_dataset.csv\")\n",
+    "cc_df['patologico'] = y_clean\n",
+    "X = cc_df.iloc[:, :-1]\n",
+    "X.to_pickle(f\"{paths.CC_DATA_PATH}/clean_X.pickle\")\n",
+    "y_clean.to_pickle(f\"{paths.CC_DATA_PATH}/clean_y.pickle\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [],
+   "source": [
+    "cdcor_df.to_csv(f\"{paths.CDCOR_DATA_PATH}/clean_cc_dataset.csv\")\n",
+    "cdcor_df['patologico'] = y_clean\n",
+    "X = cdcor_df.iloc[:, :-1]\n",
+    "X.to_pickle(f\"{paths.CDCOR_DATA_PATH}/clean_X.pickle\")\n",
+    "y_clean.to_pickle(f\"{paths.CDCOR_DATA_PATH}/clean_y.pickle\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "fft_df.to_csv(f\"{paths.FFT_DATA_PATH}/clean_cc_dataset.csv\")\n",
+    "fft_df['patologico'] = y_clean\n",
+    "X = fft_df.iloc[:, :-1]\n",
+    "X.to_pickle(f\"{paths.FFT_DATA_PATH}/clean_X.pickle\")\n",
+    "y_clean.to_pickle(f\"{paths.FFT_DATA_PATH}/clean_y.pickle\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
