Finished results with filtered data and complete time

--- a/Experiments/Latex/color_map_filtered.tex
+++ b/Experiments/Latex/color_map_filtered.tex
@@ -110,6 +110,28 @@
 6}%
 \multicolumn{1}{c|}{}&SVCSScaler& \cellcolor{green_20_10}0.500 $\pm$ 0.058& \cellcolor{green_20_12}0.496 $\pm$ 0.056& \cellcolor{green_20_5}0.516 $\pm$ 0.063& \cellcolor{green_20_16}0.490 $\pm$ 0.028\\%
 \specialrule{.2em}{.1em}{.1em}%
+\multicolumn{1}{c|}{\multirow{3}{*}{FFT}}&KNN& \cellcolor{green_12}0.519 $\pm$ 0.045& \cellcolor{green_18}0.505 $\pm$ 0.042& \cellcolor{green_19}0.504 $\pm$ 0.045& \cellcolor{green_11}0.519 $\pm$ 0.043\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&KNNSScaler& \cellcolor{green_13}0.516 $\pm$ 0.049& \cellcolor{green_20}0.502 $\pm$ 0.048& \cellcolor{green_17}0.505 $\pm$ 0.048& \cellcolor{green_22}0.496 $\pm$ 0.038\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&LR& \cellcolor{green_1}0.559 $\pm$ 0.070& \cellcolor{green_4}0.537 $\pm$ 0.062& \cellcolor{green_16}0.506 $\pm$ 0.067& \cellcolor{green_15}0.511 $\pm$ 0.057\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&LRSScaler& \cellcolor{green_2}0.557 $\pm$ 0.067& \cellcolor{green_3}0.539 $\pm$ 0.064& \cellcolor{green_14}0.516 $\pm$ 0.070& \cellcolor{green_0}0.562 $\pm$ 0.055\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&SVC& \cellcolor{green_10}0.521 $\pm$ 0.048& \cellcolor{green_5}0.534 $\pm$ 0.056& \cellcolor{green_23}0.496 $\pm$ 0.030& \cellcolor{green_21}0.500 $\pm$ 0.000\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&SVCSScaler& \cellcolor{green_6}0.534 $\pm$ 0.056& \cellcolor{green_7}0.533 $\pm$ 0.054& \cellcolor{green_8}0.525 $\pm$ 0.063& \cellcolor{green_9}0.523 $\pm$ 0.045\\%
+\specialrule{.2em}{.1em}{.1em}%
 \end{tabular}%
 }%
 \caption{Tabla comparativa en Balanced Accuracy}%
@@ -158,6 +180,28 @@
 -%
 6}%
 \multicolumn{1}{c|}{}&SVCSScaler& \cellcolor{green_20_7}0.526 $\pm$ 0.081& \cellcolor{green_20_8}0.510 $\pm$ 0.074& \cellcolor{green_20_6}0.534 $\pm$ 0.083& \cellcolor{green_20_19}0.470 $\pm$ 0.064\\%
+\specialrule{.2em}{.1em}{.1em}%
+\multicolumn{1}{c|}{\multirow{3}{*}{FFT}}&KNN& \cellcolor{green_8}0.551 $\pm$ 0.066& \cellcolor{green_16}0.526 $\pm$ 0.069& \cellcolor{green_17}0.523 $\pm$ 0.068& \cellcolor{green_10}0.545 $\pm$ 0.068\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&KNNSScaler& \cellcolor{green_11}0.543 $\pm$ 0.072& \cellcolor{green_19}0.514 $\pm$ 0.059& \cellcolor{green_18}0.519 $\pm$ 0.073& \cellcolor{green_15}0.535 $\pm$ 0.066\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&LR& \cellcolor{green_1}0.570 $\pm$ 0.077& \cellcolor{green_12}0.539 $\pm$ 0.081& \cellcolor{green_20}0.511 $\pm$ 0.085& \cellcolor{green_23}0.485 $\pm$ 0.071\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&LRSScaler& \cellcolor{green_3}0.565 $\pm$ 0.080& \cellcolor{green_14}0.536 $\pm$ 0.089& \cellcolor{green_13}0.538 $\pm$ 0.087& \cellcolor{green_2}0.566 $\pm$ 0.070\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&SVC& \cellcolor{green_7}0.553 $\pm$ 0.073& \cellcolor{green_6}0.554 $\pm$ 0.073& \cellcolor{green_21}0.501 $\pm$ 0.066& \cellcolor{green_22}0.500 $\pm$ 0.000\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&SVCSScaler& \cellcolor{green_5}0.555 $\pm$ 0.075& \cellcolor{green_4}0.557 $\pm$ 0.076& \cellcolor{green_9}0.546 $\pm$ 0.084& \cellcolor{green_0}0.587 $\pm$ 0.066\\%
 \specialrule{.2em}{.1em}{.1em}%
 \end{tabular}%
 }%
