Export results of easy data to latex

--- a/Experiments/Latex/color_map_easy.tex
+++ b/Experiments/Latex/color_map_easy.tex
@@ -110,6 +110,28 @@
 6}%
 \multicolumn{1}{c|}{}&SVCSScaler& \cellcolor{green_20_12}0.497 $\pm$ 0.051& \cellcolor{green_20_13}0.497 $\pm$ 0.052& \cellcolor{green_20_6}0.503 $\pm$ 0.046& \cellcolor{green_20_15}0.492 $\pm$ 0.027\\%
 \specialrule{.2em}{.1em}{.1em}%
+\multicolumn{1}{c|}{\multirow{3}{*}{FFT}}&KNN& \cellcolor{green_13}0.537 $\pm$ 0.041& \cellcolor{green_10}0.540 $\pm$ 0.043& \cellcolor{green_17}0.527 $\pm$ 0.038& \cellcolor{green_18}0.524 $\pm$ 0.028\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&KNNSScaler& \cellcolor{green_19}0.521 $\pm$ 0.030& \cellcolor{green_16}0.529 $\pm$ 0.040& \cellcolor{green_12}0.538 $\pm$ 0.037& \cellcolor{green_22}0.510 $\pm$ 0.029\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&LR& \cellcolor{green_7}0.550 $\pm$ 0.039& \cellcolor{green_4}0.555 $\pm$ 0.046& \cellcolor{green_1}0.607 $\pm$ 0.051& \cellcolor{green_14}0.535 $\pm$ 0.047\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&LRSScaler& \cellcolor{green_8}0.548 $\pm$ 0.044& \cellcolor{green_9}0.548 $\pm$ 0.048& \cellcolor{green_0}0.612 $\pm$ 0.048& \cellcolor{green_5}0.552 $\pm$ 0.047\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&SVC& \cellcolor{green_20}0.516 $\pm$ 0.041& \cellcolor{green_6}0.551 $\pm$ 0.042& \cellcolor{green_21}0.516 $\pm$ 0.030& \cellcolor{green_23}0.500 $\pm$ 0.000\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&SVCSScaler& \cellcolor{green_15}0.531 $\pm$ 0.037& \cellcolor{green_11}0.539 $\pm$ 0.041& \cellcolor{green_2}0.601 $\pm$ 0.053& \cellcolor{green_3}0.568 $\pm$ 0.048\\%
+\specialrule{.2em}{.1em}{.1em}%
 \end{tabular}%
 }%
 \caption{Tabla comparativa en Balanced Accuracy}%
@@ -158,6 +180,28 @@
 -%
 6}%
 \multicolumn{1}{c|}{}&SVCSScaler& \cellcolor{green_20_11}0.497 $\pm$ 0.063& \cellcolor{green_20_9}0.498 $\pm$ 0.060& \cellcolor{green_20_2}0.508 $\pm$ 0.061& \cellcolor{green_20_18}0.471 $\pm$ 0.051\\%
+\specialrule{.2em}{.1em}{.1em}%
+\multicolumn{1}{c|}{\multirow{3}{*}{FFT}}&KNN& \cellcolor{green_13}0.563 $\pm$ 0.057& \cellcolor{green_16}0.560 $\pm$ 0.052& \cellcolor{green_17}0.558 $\pm$ 0.059& \cellcolor{green_8}0.573 $\pm$ 0.051\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&KNNSScaler& \cellcolor{green_18}0.552 $\pm$ 0.052& \cellcolor{green_21}0.537 $\pm$ 0.051& \cellcolor{green_5}0.581 $\pm$ 0.059& \cellcolor{green_14}0.562 $\pm$ 0.056\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&LR& \cellcolor{green_7}0.573 $\pm$ 0.049& \cellcolor{green_4}0.582 $\pm$ 0.054& \cellcolor{green_2}0.633 $\pm$ 0.054& \cellcolor{green_20}0.547 $\pm$ 0.054\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&LRSScaler& \cellcolor{green_9}0.573 $\pm$ 0.051& \cellcolor{green_10}0.568 $\pm$ 0.056& \cellcolor{green_1}0.635 $\pm$ 0.054& \cellcolor{green_11}0.566 $\pm$ 0.059\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&SVC& \cellcolor{green_22}0.505 $\pm$ 0.066& \cellcolor{green_6}0.581 $\pm$ 0.059& \cellcolor{green_12}0.565 $\pm$ 0.047& \cellcolor{green_23}0.500 $\pm$ 0.000\\%
+\cline{2%
+-%
+6}%
+\multicolumn{1}{c|}{}&SVCSScaler& \cellcolor{green_19}0.547 $\pm$ 0.047& \cellcolor{green_15}0.561 $\pm$ 0.057& \cellcolor{green_0}0.636 $\pm$ 0.061& \cellcolor{green_3}0.612 $\pm$ 0.051\\%
 \specialrule{.2em}{.1em}{.1em}%
 \end{tabular}%
 }%
